[project]
name = "aura"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # test fixtures and fuzz generators often exceed line length

[tool.ruff.lint.per-file-ignores]
# Issue #1935: restored fuzz drivers inject path bootstrap before stdlib imports.
"tests/fuzz/drivers/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"